crates/service/tests/code_lens/snapshots/features__code_lens__list.snap
---
source: crates/service/tests/code_lens/mod.rs
expression: response
---
[
  {
    "range": {
      "start": {
        "line": 2,
        "character": 2
      },
      "end": {
        "line": 2,
        "character": 17
      }
    },
    "data": {
      "kind": "global",
      "uri": "untitled:test"
    }
  },
  {
    "range": {
      "start": {
        "line": 3,
        "character": 2
      },
      "end": {
        "line": 4,
        "character": 17
      }
    },
    "data": {
      "kind": "func",
      "uri": "untitled:test"
    }
  },
  {
    "range": {
      "start": {
        "line": 5,
        "character": 2
      },
      "end": {
        "line": 5,
        "character": 14
      }
    },
    "data": {
      "kind": "memory",
      "uri": "untitled:test"
    }
  },
  {
    "range": {
      "start": {
        "line": 6,
        "character": 2
      },
      "end": {
        "line": 6,
        "character": 21
      }
    },
    "data": {
      "kind": "table",
      "uri": "untitled:test"
    }
  },
  {
    "range": {
      "start": {
        "line": 7,
        "character": 2
      },
      "end": {
        "line": 8,
        "character": 14
      }
    },
    "data": {
      "kind": "func",
      "uri": "untitled:test"
    }
  },
  {
    "range": {
      "start": {
        "line": 9,
        "character": 2
      },
      "end": {
        "line": 9,
        "character": 35
      }
    },
    "data": {
      "kind": "type",
      "uri": "untitled:test"
    }
  },
  {
    "range": {
      "start": {
        "line": 10,
        "character": 2
      },
      "end": {
        "line": 10,
        "character": 7
      }
    },
    "data": {
      "kind": "tag",
      "uri": "untitled:test"
    }
  },
  {
    "range": {
      "start": {
        "line": 11,
        "character": 2
      },
      "end": {
        "line": 11,
        "character": 8
      }
    },
    "data": {
      "kind": "data",
      "uri": "untitled:test"
    }
  },
  {
    "range": {
      "start": {
        "line": 12,
        "character": 2
      },
      "end": {
        "line": 12,
        "character": 8
      }
    },
    "data": {
      "kind": "elem",
      "uri": "untitled:test"
    }
  }
]
