crates/service/tests/code_lens/snapshots/features__code_lens__zero_references.snap
---
source: crates/service/tests/code_lens/mod.rs
expression: response
---
{
  "range": {
    "start": {
      "line": 2,
      "character": 2
    },
    "end": {
      "line": 2,
      "character": 8
    }
  },
  "command": {
    "title": "0 references",
    "command": "wasmLanguageTools.showReferences",
    "arguments": [
      "untitled:test",
      {
        "character": 2,
        "line": 2
      },
      []
    ]
  }
}
